--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
-  <title></title>
+  <title>Roman Numerals</title>
   </head>
   <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Roman Numeral Converter</h1>
+      </div>
+      <form class="converter-form">
+        <label for="input">Enter number</label>
 
+        <input type="number" name="number-to-convert">
+        <button type="submit" name="submit-button">Submit</button>
+      </form>
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <span id="result"></span>
+        </div>
+      </panel>
+    </div>
   </body>
 </html>
