show NaN for input numerals greater than 3999

--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
         <h1>Roman Numeral Converter</h1>
       </div>
       <form class="converter-form">
-        <label for="input">Enter number</label>
-
-        <input type="number" name="number-to-convert">
-        <button type="submit" name="submit-button">Submit</button>
+        <div>
+          <label for="input">Enter number</label>
+          <input type="number" name="number-to-convert" id="number">
+        </div>
+        <div>
+          <button type="submit" id="submit-button">Submit</button>
+        </div>
       </form>
       <div class="panel panel-default">
         <div class="panel-body">
           <span id="result"></span>
         </div>
-      </panel>
+      </div>
     </div>
   </body>
 </html>
