finish project, translate input numbers to Roman numerals

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
       <form class="converter-form">
         <div>
-          <label for="input">Enter number</label>
+          <label for="input">Enter number</label><br>
           <input type="number" name="number-to-convert" id="number">
         </div>
         <div>
